This is just to motivate myself to improve a little bit every day :)

Best: 32

25-08-2025
    - Apply linting

22-08-2025
    - Cleaned up 'content' object retrieval for screens on the view model and database side, now need to make it typesafe.
    - Make NavDestination arguments typesafe by making primary constructor private when payload expected.

18-08-2025
Streak: 1
    - Add basic, blocking, non-type-safe call to database to load task by id when navigating to destination.

15-08-2025
Streak: 4
    - Refactor navigation into its own module. Create helper function to define serialisation &
    deserialisation of custom nav types.

14-08-2025
Streak: 3
    - Still figuring out navigation. Need to serialize the Id object that MongoDB uses as a key,
    so we can load content when arriving at the target screen. Passing primitives already working.

12-08-2025
Streak: 1
    - Commit unfinished work, in process of converting screen classes to functions.
    - Implement navigation destinations as sealed interface of serialisable objects.

29-04-2025
Streak: 1
    - Apply intermediate step in removing Voyager Navigation
        - Screens are still classes, instead of composable functions.
        - Need to figure out how to specify the task to display (when clicked from HomeScreen)
        with event/call-back, instead of passing the task to display directly.
        - But: As intermediate step, get the TaskScreen to display the correct task when clicked by using param.

08-04-2025
Streak: 2
    - Start refactoring and removing Voyager Navigation dependency

07-04-2025
Streak: 1
    - Following Tutorial: Make FAB visible when opening keyboard, prevent crash when adding task
    - Following Tutorial: Hook up empty Home Screen lambdas to Home View Model to underlying db Actions
    - Move Koin initialisation back out of general App code and into Android MainActivity.kt.
        Because  if you e.g. change dark mode theme (perhaps other state changes trigger this too)