@@ -17,6 +17,8 @@ import androidx.compose.ui.text.style.TextAlign
 import androidx.compose.ui.unit.dp
 import androidx.compose.ui.unit.sp
 import domain.screens.dayPartMenu.DayPart
+import libs.mvvm.getViewModel
+import navigation.NavDestination
 import org.jetbrains.compose.resources.ExperimentalResourceApi
 import org.jetbrains.compose.resources.stringResource
 import presentation.screens.dayPartMenu.checklistButtons.ChecklistButton
@@ -25,9 +27,11 @@ import presentation.screens.dayPartMenu.morningButtons.MorningButtons
 @OptIn(ExperimentalResourceApi::class)
 @Composable
 fun DayPartMenuScreen(
-    viewModel: DayPartMenuViewModel,
-    onNavigate: (() -> Unit)? = null,
+    content: NavDestination.DayPart,
+    onBack: () -> Unit,
 ) {
+    val viewModel = getViewModel<DayPartMenuViewModel>()
+    viewModel.setDayPart(content.part)
     val uiState by viewModel.uiState.collectAsState()
     val visibleButtons = // uiState.taskButtons.
         when (uiState.part) {
